1.0: Mejoras en la interfaz y solucion errores